--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     background-color: #d9dcd6;
 }
 nav {
-    padding: 20px;
+    padding: 15px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
@@ -22,16 +22,17 @@ span {
     color: #d9dcd6;
 }
 ul {
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     list-style-type: none;
 }
-nav > ul > li {
+li {
     display: inline-block;
-    margin-left: 25px;
+    margin-left: 17px;
 }
 a {
     color: #ffffff;
@@ -62,13 +63,13 @@ p {
     margin-left: 25px;
 }
 
-.main {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.side-bar {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -79,9 +80,7 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, 
-.benefit-brand,
-.benefit-cost {
+.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -91,17 +90,13 @@ h3 {
     text-align: center;
 }
 
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing {
+.online-optimization{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -110,15 +105,11 @@ h3 {
     color: #ffffff;
 }
 
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img {
+.online-optimization img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2,
-.online-reputation-management h2,
-.social-media-marketing h2 {
+.online-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
