--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -21,6 +21,7 @@ h1 {
 span {
     color: #d9dcd6;
 }
+
 ul {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -29,6 +30,7 @@ ul {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     list-style-type: none;
+    /* note that the list is actually floating right so when I doesnt fit it will un-align itself */
 }
 li {
     display: inline-block;
@@ -42,8 +44,7 @@ p {
     font-size: 16px;
 }
 
-
-/* the rest off the css is for the body elements*/
+/* the rest off the css is for the body elements. The cover image */ 
 .cover-image {
     height: 800px;
     width: 100%;
@@ -52,7 +53,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* these are image class names. they are for telling what direction they will float to */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -67,6 +68,7 @@ main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    /* note that it is 75% meaning that the side bar is about 25% */
 }
 
 aside {
